static/orange.css
html {
  background: url(http://farm9.staticflickr.com/8169/8049691149_40b1c22813_h.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

body {
  font-family: sans-serif;
/*   background-color: #121212; */
}

#wrapper {
    margin-left: auto;
    margin-right: auto; 
  /*width: 1000px;*/
    width: 80%;
    background-color: rgba(255,255,255,0.9);
    padding: 20px;
/*   position: relative; */
}

h1 {
    font-size: 20pt;
/*   text-transform: uppercase; */
    text-align: center;
    margin-bottom: 50px;
    margin-top: 25px;
    padding: 0px;
}

h2 {
    font-style: bold;
    text-decoration: underline;
    text-align: center; 
    margin-top: 25px;
}

h3 {
    font-style: bold;
    text-decoration: underline;
    text-align: center;   
}

p {
  font-size: 13pt;
}


#intro {
    text-align: center;
}

#time_div {
    float: left;
/*     border: 1px solid #bbb; */
    /*text-align: center;*/
    width: 65%;
    height: 100%;
    display:inline-block;
}

#chart_div {
    height: 100%;
    float: right;
/*     border: 1px solid #bbb; */
    height: 100%;
    display:inline-block;
}
#pie_div {
    margin-top: 5px;
    width: 80%;
    height: 300px;
    float: left;
/*     border: 1px solid #bbb; */
    text-align: center;
    display:inline-block;
}
#slider_div {
    width: 10%;
    float: right;
    height: 100%;
/*     border: 1px solid #bbb; */
    text-align: center;
    display:inline-block;
}
#table_div {
/*     border: 1px solid #bbb; */
    text-align: center;
    display:inline-block;
}

#annotation {
    float: left;
    width: 800px;
/*     border: 1px solid #bbb; */
}

#footer {
    clear: both;
    padding-top: 20px;
}

